# icecast-server

./: .gitignore  README.md  docker-compose.yml
icecast/: Dockerfile  start.sh
icecast/etc-icecast2/web/: status.xsl  style.css
sample/: icecast.xml  streambot.env
streambot/: Dockerfile  ezstream.xml  mp3pkg.repo  mypy.ini  playlist.sh  pyproject.toml  s3playlist.py  update-config.sh
streambot/pkg/: lame-3.100-1.el7.x86_64.rpm  lame-devel-3.100-1.el7.x86_64.rpm  lame-libs-3.100-1.el7.x86_64.rpm  libmad-0.15.1b-26.el7.x86_64.rpm  libmp3lame0-3.100-1.7.x86_64.rpm  madplay-0.15.2b-11.el7.x86_64.rpm  taglib-1.8-8.20130218git.el7.x86_64.rpm  taglib-devel-1.8-8.20130218git.el7.x86_64.rpm
