[tool.poetry]
name = "ice3"
version = "0.1.0"
description = "Stream audio files in an S3 bucket to an Icecast server"
authors = ["Mischa Spiegelmock <me@mish.dev>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.13.5"
eyed3 = "^0.9.5"
configparser = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
